--- a/pom.xml
+++ b/pom.xml
@@ -1,94 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project:project xmlns:project="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<project:modelVersion>4.0.0</project:modelVersion>
-	<project:parent>
-		<project:groupId>org.springframework.boot</project:groupId>
-		<project:artifactId>spring-boot-starter-parent</project:artifactId>
-		<project:version>3.2.5</project:version>
-		<project:relativePath/> <!-- lookup parent from repository -->
-	</project:parent>
-	<project:groupId>com.example</project:groupId>
-	<project:artifactId>project</project:artifactId>
-	<project:version>0.0.1-SNAPSHOT</project:version>
-	<project:name>project</project:name>
-	<project:description>project</project:description>
-	<project:properties>
-		<project:java.version>21</project:java.version>
-	</project:properties>
-	<project:dependencies>
-		<project:dependency>
-			<project:groupId>org.springframework.boot</project:groupId>
-			<project:artifactId>spring-boot-starter-data-jpa</project:artifactId>
-		</project:dependency>
-		<project:dependency>
-			<project:groupId>org.springframework.boot</project:groupId>
-			<project:artifactId>spring-boot-starter-web</project:artifactId>
-		</project:dependency>
-
-		<project:dependency>
-			<project:groupId>com.mysql</project:groupId>
-			<project:artifactId>mysql-connector-j</project:artifactId>
-			<project:scope>runtime</project:scope>
-		</project:dependency>
-		<project:dependency>
-			<project:groupId>org.projectlombok</project:groupId>
-			<project:artifactId>lombok</project:artifactId>
-			<project:optional>true</project:optional>
-		</project:dependency>
-		<project:dependency>
-			<project:groupId>org.springframework.boot</project:groupId>
-			<project:artifactId>spring-boot-starter-thymeleaf</project:artifactId>
-		</project:dependency>
-		<project:dependency>
-			<project:groupId>org.springframework.boot</project:groupId>
-			<project:artifactId>spring-boot-devtools</project:artifactId>
-			<project:scope>runtime</project:scope>
-			<project:optional>true</project:optional>
-		</project:dependency>
-		<project:dependency>
-			<project:groupId>org.webjars</project:groupId>
-			<project:artifactId>bootstrap</project:artifactId>
-			<project:version>5.3.3</project:version>
-		</project:dependency>
-		<project:dependency>
-			<project:groupId>org.webjars.npm</project:groupId>
-			<project:artifactId>bootstrap-icons</project:artifactId>
-			<project:version>1.10.3</project:version>
-		</project:dependency>
-		<project:dependency>
-			<project:groupId>nz.net.ultraq.thymeleaf</project:groupId>
-			<project:artifactId>thymeleaf-layout-dialect</project:artifactId>
-			<project:version>3.3.0</project:version>
-		</project:dependency>
-
-
-		<project:dependency>
-			<project:groupId>org.springframework.boot</project:groupId>
-			<project:artifactId>spring-boot-starter-validation</project:artifactId>
-			<project:version>3.2.0</project:version>
-		</project:dependency>
-
-
-		<project:dependency>
-			<project:groupId>org.springdoc</project:groupId>
-			<project:artifactId>springdoc-openapi-starter-webmvc-ui</project:artifactId>
-			<project:version>2.3.0</project:version>
-		</project:dependency>
-		<project:dependency>
-			<project:groupId>org.springframework.boot</project:groupId>
-			<project:artifactId>spring-boot-starter-test</project:artifactId>
-			<project:scope>test</project:scope>
-		</project:dependency>
-	</project:dependencies>
-
-	<project:build>
-		<project:plugins>
-			<project:plugin>
-				<project:groupId>org.springframework.boot</project:groupId>
-				<project:artifactId>spring-boot-maven-plugin</project:artifactId>
-			</project:plugin>
-		</project:plugins>
-	</project:build>
-
-</project:project>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.2.5</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
+	<groupId>com.example</groupId>
+	<artifactId>project</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>project</name>
+	<description>project</description>
+	<properties>
+		<java.version>21</java.version>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>5.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>bootstrap-icons</artifactId>
+			<version>1.10.3</version>
+		</dependency>
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+</project>
