--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=project
 spring.datasource.url=jdbc:mysql://localhost:3306/testProjet?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=helloyassine 
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
